--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     .header {
-      display: flex;
+      display: flex; 
       align-items: center;
       padding: 20px;
       background-color: #fff0f5;
@@ -65,7 +65,7 @@
   </div>
 
   <div class="banner">
-    <img src="https://i.postimg.cc/tZz0dWxZ/pastel-beats-banner.jpg" alt="Pastel Beats Banner" style="width:100%; max-width: 1000px; display:block; margin: 30px auto; border-radius: 12px;">
+    <img src="https://ibb.co/xKXz69r5" style="width:100%; max-width: 1000px; display:block; margin: 30px auto; border-radius: 12px;">
   </div>
 
 </body>
