--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
   <title>Kontakt – Pastel Beats</title>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
   <style>
-    body {
+    body {https://codepen.io/your-work
       font-family: 'Comfortaa', sans-serif;
       background-color: #fffaf0;
       color: hotpink;
@@ -39,7 +39,7 @@
       margin: 0 8px;
       display: inline-block;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background-color rgb(247, 233, 237);
     }
     .nav a:hover {
       background-color: deeppink;
