--- a/shop.html
+++ b/shop.html
@@ -39,7 +39,7 @@
       margin: 0 8px;
       display: inline-block;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background-color rgb(247, 233, 237);
     }
     .nav a:hover {
       background-color: deeppink;
