--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
   <meta charset="UTF-8" />
   <title>Über uns – Pastel Beats</title>
@@ -39,7 +39,7 @@
       margin: 0 8px;
       display: inline-block;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background-color (247, 233, 237);
     }
     .nav a:hover {
       background-color: deeppink;
