--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       margin: 0 8px;
       display: inline-block;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background-color rgb(247, 233, 237);
     }
 
     .nav a:hover {
