--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="banner">
-    <img src="https://ibb.co/xKXz69r5" style="width:100%; max-width: 1000px; display:block; margin: 30px auto; border-radius: 12px;">
+    <img src="96B28E9B-F6F4-4B00-8947-EB61141E0BAF.jpeg">
   </div>
 
 </body>
