--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
       margin: 40px 20px;
       font-size: 24px;
     }
+
+  .banner img {
+  width: 600px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+    
   </style>
 </head>
 <body>
