--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Pastel Beats</title>
   <style>
@@ -51,7 +52,7 @@
     }
 
   .banner img {
-  width: 400px;
+  width: 500px;
   max-width: 100%;
   height: auto;
   display: block;
