--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
   <title>Pastel Beats</title>
   <style>
+    
     body {
       font-family: 'Comfortaa', sans-serif;
-      background-color: #fffaf0;
-      color: hotpink;
+      background-color: #fffaf0; 
+      color: hotpink;         
       margin: 0;
       padding: 0;
     }
 
+
     .header {
-      display: flex; 
-      align-items: center;
+      display: flex;             
+      align-items: center;       
       padding: 20px;
       background-color: #fff0f5;
     }
+
 
     .logo {
       font-size: 28px;
@@ -24,10 +27,12 @@
       margin-left: 20px;
     }
 
+
     .nav {
-      margin-left: auto;
+      margin-left: auto;        
       margin-right: 20px;
     }
+
 
     .nav a {
       background-color: hotpink;
@@ -38,8 +43,10 @@
       margin: 0 8px;
       display: inline-block;
       font-weight: bold;
-      transition: background-color rgb(247, 233, 237);
+      transition: background-color 0.3s ease;
+
     }
+
 
     .nav a:hover {
       background-color: deeppink;
@@ -51,18 +58,20 @@
       font-size: 24px;
     }
 
-  .banner img {
-  width: 800px;
-  max-width: 120%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-    
+  
+    .banner img {
+      width: 
+      max-width: 100%;           
+      height: auto;             
+      display: block;     
+      margin: 0 auto;            
+    }
+
   </style>
 </head>
 <body>
 
+  <!-- Header with Logo and Navigation -->
   <div class="header">
     <div class="logo">Pastel Beats</div>
     <div class="nav">
@@ -73,6 +82,7 @@
     </div>
   </div>
 
+  
   <div class="banner">
     <img src="96B28E9B-F6F4-4B00-8947-EB61141E0BAF.jpeg">
   </div>
