--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   
     .banner img {
+      width: 500px;
       max-width: 100%;           
       height: auto;             
       display: block;     
@@ -69,8 +70,6 @@
   </style>
 </head>
 <body>
-
-  <!-- Header with Logo and Navigation -->
   <div class="header">
     <div class="logo">Pastel Beats</div>
     <div class="nav">
