--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   
     .banner img {
+      width: 650px;
       max-width: 120%;           
       height: auto;             
       display: block;     
