--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Über uns – Pastel Beats</title>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
+  <title>Über uns – Pastel Beats</title>p
   <style>
     body {
       font-family: 'Comfortaa', sans-serif;
