--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   
     .banner img {
-      width: 600px;
+      width: 100%;
       max-width: 100%;           
       height: auto;             
       display: block;     
