--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
   <title>Shop – Pastel Beats</title>
   <style>
     body {
-      font-family: 'Comfortaa', sans-serif;
+      font-family: 'Times New Roman', sans-serif;
       background-color: #fffaf0;
       color: hotpink;
       margin: 0;
