--- a/kontakt.html
+++ b/kontakt.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <title>Kontakt – Pastel Beats</title>
   <style>
     body {https://codepen.io/your-work
-      font-family: 'Comfortaa', sans-serif;
+      font-family: 'Times New Roman', sans-serif;
       background-color: #fffaf0;
       color: hotpink;
       margin: 0;
