--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -5,7 +5,7 @@
   <title>Über uns – Pastel Beats</title>p
   <style>
     body {
-      font-family: 'Comfortaa', sans-serif;
+      font-family: 'Times New Roman', sans-serif;
       background-color: #fffaf0;
       color: hotpink;
       margin: 0;
