--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     
     body {
-      font-family: 'Comfortaa', sans-serif;
+      font-family: 'Times New Roman', sans-serif;
       background-color: #fffaf0; 
       color: hotpink;         
       margin: 0;
