--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Über uns – Pastel Beats</title>p
+  <title>Über uns – Pastel Beats</title>
   <style>
     body {
       font-family: 'Times New Roman', sans-serif;
